--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ Version: 1.0
 /*--------------------------------------------------------------
         Globals
 --------------------------------------------------------------*/
-@import url('https://fonts.googleapis.com/css?family=Oswald:400,600|Roboto');
+@import url('https://fonts.googleapis.com/css?family=Oswald:400,600,700|Roboto|Montserrat:700');
 #front,.mastfoot {
   display: none;
 }
@@ -135,6 +135,32 @@ ul,li{
 /*--------------------------------------------------------------
         Frontpage
 --------------------------------------------------------------*/
+#topBox{
+	 display: block;
+    width: 100%;
+    height: 250px;
+    box-shadow: 0 0 10px black;
+    transform: translate;
+    position: absolute;
+}
+.layer {
+    position: absolute;
+    display: block;
+	font-size: 410%;
+	line-height:0.9;
+    font-family: 'Montserrat';
+	font-weight: 700;
+	text-transform: lowercase;
+	margin: 5% 10%;
+}
+#l1 {
+    z-index: 1;
+	color:yellow;
+	text-shadow: 5px 5px 0px yellow;
+}
+#l2 {
+    z-index: 2;
+}
 #front-page{
     background: url('http://aito.ca/iwelcome/wp-content/uploads/2017/07/pattern.jpg');
 }
@@ -259,6 +285,7 @@ margin: 0px;
     overflow: hidden;
     position: relative;
     z-index: 500;
+	transform: translateY(250px);
 }
 .grid-outer li {
     width: 100%;
@@ -311,9 +338,7 @@ margin: 0px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    transform: translateY(-200px);
     z-index: 5;
-    box-shadow: 0 0 10px black;
 }
 /*---   Section 3, Homepage ---*/
 .section-3{
@@ -338,7 +363,6 @@ margin: 0px;
     background: url('http://aito.ca/iwelcome/wp-content/uploads/2017/07/pattern.jpg');
     color:black;
     overflow: hidden;
-    transform: translateY(-100px);
 }
 #section-4-container{
     width:60%;
